0.15
 [Common]
 - Add explicit version for usage of List::Util.
 - Rename example files to better names.
 - Update Module::Install to 1.21 version.
 - Update copyright years.

 [Tags::Output]
 - Fix work with 'printed_tags' structure.

 [Tags::Utils]
 - Add test messages.

0.14 2023-01-09T11:16:55+01:00
 [Common]
 - Fix dependencies and rewrite from List::MoreUtils to List::Util.
 - Update copyright years.

0.13 2022-11-02T23:12:31+01:00
 [Tags::Output::Raw]
 - Fix warning for 'no_data_callback' if isn't in element.

0.12 2022-10-25T16:12:31+02:00
 [Common]
 - Update copyright years.

 [Tags::Output]
 - Add 'no_data_callback' parameter to set list of elements which not
   process 'data_callback'. Example is 'script' in which we don't need HTML
   escaping.

0.11 2021-02-20T18:31:32+01:00
 [Common]
 - Add blank lines after arguments and before return.
 - Fix bugtracker.
 - Update copyright years.

 [Tags::Output]
 - Add 'output_encoding' parameter.
 - Add $self argument to callbacks as second argument.
 - Add default 'output_callback' with encoding to 'output_encoding' if
   defined.

0.10 2020-10-14T00:56:08+02:00
 [Common]
 - Add missing test messages.
 - Move t/dtd directory out. There is for testing of validation.

 [Tags::Output]
 - Add 'input_tags_item_callback' for processing before 'Tags' put().

 [Tags::Output::Raw]
 - Add 'input_tags_item_callback' for processing before 'Tags' put().
 - Sort modules in test.

0.09 2020-04-27T23:28:40+02:00
 [Tags::Output]
 - Add open_elements() method, deprecate open_tags() method with warning.

 [Tags::Output::Raw]
 - Add open_elements() method, deprecate open_tags() method with warning.
 - Fix issue with XML element in lowercase only.

0.08 2020-04-26T16:04:35+02:00
 [Common]
 - Improve LICENSE AND COPYRIGHT section in doc.
 - Improve SYNOPSIS section in doc.
 - Remove helper get_stdout.inc in tests.
 - Rename test files to better version (tag → element).
 - Update author github username.
 - Update copyright years.
